--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,16 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- *
  *= require_tree .
  *= require_self
  */
+ @import "plugins/boostrap-theme.css";
+ @import "plugins/bootstrap.scss";
+ @import "plugins/waves.scss";
+ @import "plugins/animate.scss";
+ @import "plugins/morris.scss";
+ @import "plugins/style.scss";
+
+ body {
+  background-color: #00BCD4;
+ }
