--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
               <i class="material-icons">person</i>
           </span>
           <div class="form-line">
-            <%= form.text_field :username, id: :user_username, class: 'form-control', placeholder: 'staff id', autofocus:true, required: true%>
+            <%= form.text_field :username, id: :user_username, class: 'form-control', placeholder: 'Staff ID', autofocus:true, required: true%>
           </div>
         </div>
         <div class="input-group">
@@ -30,7 +30,7 @@
               <i class="material-icons">email</i>
           </span>
           <div class="form-line">
-            <%= form.text_field :email, id: :user_email, class: 'form-control', placeholder: 'email' , required: true%>
+            <%= form.text_field :email, id: :user_email, class: 'form-control', placeholder: 'Email' , required: true%>
           </div>
         </div>
         <div class="input-group">
@@ -38,7 +38,7 @@
               <i class="material-icons">lock</i>
           </span>
           <div class="form-line">
-            <%= form.password_field :password, id: :user_password, class: 'form-control', placeholder: 'password', required: true %>
+            <%= form.password_field :password, id: :user_password, class: 'form-control', placeholder: 'Password', required: true %>
           </div>
         </div>
         <div class="input-group">
