Add registration and login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,15 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="http://res.cloudinary.com/dzwafstu3/image/upload/v1500335476/nnpc/favicon.pngg" type="image/png">
+    <link rel="shortcut icon" href="http://res.cloudinary.com/dzwafstu3/image/upload/v1500335476/nnpc/favicon.png" type="image/png">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <% if session[:current_user_info] && cookies["jwt-token"] %>
+      <%= render("layouts/header")%>
+    <% end %>
     <%= yield %>
   </body>
 </html>
