--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
 <div class="login-page">
-  <%= render 'form', user: @user %>
+  <%= render "layouts/registerform", user: @user%>
   <%= link_to 'Back', users_path %>
 </div>
