--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,41 +1,39 @@
-<ul id="dropdown1" class="dropdown-content">
-  <li><a href="<%= logout_path %>">Logout</a></li>
-</ul>
-<nav class="app-header">
-  <div class="nav-wrapper">
-    <div class="left">
-      <div class="logo">
-        <a href="#">
-          <%= image_tag("logo.png", :style => "width:35px; height: auto;") %>
-        </a>
-      </div>
-      <div class="app-name">
-        <h1 style="">Loan App</h1>
-      </div>
+<!-- #END# Page Loader -->
+<!-- Overlay For Sidebars -->
+<div class="overlay"></div>
+<!-- #END# Overlay For Sidebars -->
+<!-- Search Bar -->
+<div class="search-bar">
+<div class="search-icon">
+    <i class="material-icons">search</i>
+</div>
+<input type="text" placeholder="NAME OR EMAIL...">
+<div class="close-search">
+    <i class="material-icons">close</i>
+</div>
+</div>
+<nav class="navbar">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
+      <a href="javascript:void(0);" class="bars"></a>
+      <a class="navbar-brand" href="#">
+      <img src="http://res.cloudinary.com/dzwafstu3/image/upload/v1500335660/nnpc/logo.png">
+      </a>
     </div>
-
-    <ul id="nav-mobile" class="right">
-      <li>
-          <%= form_tag index_path, method: "get", class: "form-inline"  do %>
-            <%= text_field_tag :search, params[:search], class: "form-control searchbar", placeholder: "Search by name or email..." %>
-            <% submit_tag "", name: nil%>
-          <% end %>
-      </li>
-      <li>
-        <%= button_tag "", class: "clear" do %>
-          <i class="material-icons delete-icon">clear</i>
-        <% end %>
-      </li>
-      <li>
-        <img src= "<%= session[:current_user_info][:picture] %>"
-             alt= "avatar" class="avatar" style="border-radius: 50%; border: 2px solid #6E87EE;"/>
-      </li>
-      <li>
-        <a class="dropdown-button" href="#!" data-activates="dropdown1" style="height: 57px;">
-          <%= session[:current_user_info][:name] %>
-          <i class="material-icons right">arrow_drop_down</i>
-        </a>
-      </li>
-    </ul>
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <!-- Call Search -->
+          <li><a href="javascript:void(0);" class="js-search" data-close="true"><i class="material-icons">search</i></a></li>
+          <!-- #END# Call Search -->
+          <!-- Notifications -->
+          <li class="dropdown">
+            <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button">
+              <i class="material-icons">notifications</i>
+              <span class="label-count">7</span>
+            </a>
+          <li class="pull-right"><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="material-icons">more_vert</i></a></li>
+        </ul>
+      </div>
   </div>
 </nav>
