--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -9,3 +9,34 @@ html {
   padding: 0 !important;
   height: auto !important;
 }
+
+.menu-navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top:76px !important;
+  padding: 20px !important;
+  max-height: 20px !important;
+  position: fixed;
+  width: 100vw;
+  background: rgb(250, 250, 250);
+  -moz-box-shadow:  0 0 3px #000000 !important;
+  -webkit-box-shadow: 0 0 3px #000000 !important;
+  box-shadow: 0 0 3px #000000 !important;
+
+  a {
+    padding: 10px;
+    border: thin 2px;
+
+    &:hover {
+      text-decoration: none;
+      background: rgb(211, 211, 211);
+    }
+  }
+}
+
+.container {
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+}
