--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,6 @@
-<%= render("layouts/navbar")%>
+<div class="flash-message">
+  <% if flash[:notice] %>
+    <%= content_tag :span, flash[:notice], class: "notice", id: "puffly" %>
+  <% end %>
+</div>
 
