--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,13 +4,13 @@
 <!-- #END# Overlay For Sidebars -->
 <!-- Search Bar -->
 <div class="search-bar">
-<div class="search-icon">
+  <div class="search-icon">
     <i class="material-icons">search</i>
-</div>
-<input type="text" placeholder="NAME OR EMAIL...">
-<div class="close-search">
+  </div>
+  <input type="text" placeholder="NAME OR EMAIL...">
+  <div class="close-search">
     <i class="material-icons">close</i>
-</div>
+  </div>
 </div>
 <nav class="navbar">
   <div class="container-fluid">
@@ -21,19 +21,30 @@
       <img src="http://res.cloudinary.com/dzwafstu3/image/upload/v1500335660/nnpc/logo.png">
       </a>
     </div>
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <!-- Call Search -->
-          <li><a href="javascript:void(0);" class="js-search" data-close="true"><i class="material-icons">search</i></a></li>
-          <!-- #END# Call Search -->
-          <!-- Notifications -->
-          <li class="dropdown">
-            <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button">
-              <i class="material-icons">notifications</i>
-              <span class="label-count"></span>
-            </a>
-          <li class="pull-right"><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="material-icons">more_vert</i></a></li>
-        </ul>
-      </div>
+    <div class="collapse navbar-collapse" id="navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <!-- Call Search -->
+        <li><a href="javascript:void(0);" class="js-search" data-close="true"><i class="material-icons">search</i></a></li>
+        <!-- #END# Call Search -->
+        <!-- Notifications -->
+        <li class="dropdown">
+          <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button">
+            <i class="material-icons">notifications</i>
+            <span class="label-count"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li class="header">NOTIFICATIONS</li>
+            <li class="body">
+              <ul>
+                <li>No notification</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="/logout" title="Logout"><i class="material-icons">power_settings_new</i></a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
