--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 
   <body class="theme-teal">
     <% if cookies[:user_info] && session[:current_user_info] %>
-      <%= render("layouts/header")%>
+      <%= render("layouts/header") %>
+      <%= render("layouts/navbar") %>
     <% end %>
     <%= yield %>
   </body>
