--- a/app/views/layouts/_registerform.html.erb
+++ b/app/views/layouts/_registerform.html.erb
@@ -32,7 +32,7 @@
 
             <div class="form-group row">
               <div class="col-12">
-                <%= form.password_field :password, id: :user_password, class: 'form-control', placeholder: 'Password', required: true %>
+                <%= password_field_tag :password, params[:password], class: "form-control", placeholder: "Password", required: true %>
               </div>
             </div>
 
