--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
             <div class="row">
               <div class="col-sm-6 col-8 offset-2 offset-sm-0">
                 <a class="navbar-brand" href="#">
-                  <img src="assets/logo.png" height="38" alt="">
+                  <img src="http://res.cloudinary.com/dzwafstu3/image/upload/v1500335660/nnpc/logo.png" height="38" alt="">
                 </a>
               </div>
               <div class="col-sm-6 col">
@@ -29,7 +29,7 @@
                   </li>
                   <li class="dropdown list-inline-item">
                     <div class="user-toggle dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="false" aria-expanded="true">
-                      <img src="assets/loan-user.png" height="30" alt="" class="rounded-circle">
+                      <img src="http://res.cloudinary.com/dzwafstu3/image/upload/v1505747865/nnpc/loan-user.png" height="30" alt="" class="rounded-circle">
                       <span class="caret"></span>
                     </div>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
