--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the profiles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.profile-content {
+  font-size: 0.9em;
+  margin-bottom: 60px;
+
+  td:nth-child(even) {
+    color: #555;
+  }
+  td:nth-child(odd) {
+    color: #333;
+    font-weight: bold;
+  }
+}
