--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,9 @@
                       <span class="caret"></span>
                     </div>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                      <a class="dropdown-item" href="#"><span class="fa fa-user"></span> Profile</a>
+                      <%= link_to profile_path(1), class: "dropdown-item" do %>
+                        <span class="fa fa-user"></span> Profile
+                      <% end %>
                       <a class="dropdown-item" href="#"><span class="fa fa-cog"></span> Settings</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="/logout" title="Logout"><span class="fa fa-sign-out"></span> Logout</a>
@@ -44,9 +46,22 @@
           </div>
         </nav>
 
-        <% unless admin? %>
-          <%= render("layouts/navbar-user") %>
-        <% else %>
-          <%= render("layouts/navbaradmin") %>
-        <% end %>
+        <nav class="navbar navbar-toggleable-md main-navigation">
+          <div class="container">
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <%= link_to root_path, class: "nav-link" do %>
+                    <span class="fa fa-home"></span> Home <span class="sr-only">(current)</span>
+                  <% end %>
+                </li>
+                <% unless admin? %>
+                  <%= render("layouts/navbar-user") %>
+                <% else %>
+                  <%= render("layouts/navbaradmin") %>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </section>
