--- a/app/views/layouts/_navbar-admin.html.erb
+++ b/app/views/layouts/_navbar-admin.html.erb
@@ -1,6 +1,9 @@
-<div class="menu-navbar">
-  <a href="/">Home</a>
-  <a href="#">Manage Loans</a>
-  <a href="#">Manage Contributions</a>
-  <a href="#">Manage Users</a>
-</div>
+<li class="nav-item">
+  <a class="nav-link" href="#"><span class="fa fa-circle-o"></span> Manage Loans</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="#"><span class="fa fa-calendar"></span> Manage Contribution</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="#"><span class="fa fa-circle-o"></span> Manage Users</a>
+</li>
