feat(userLogin): Redirects newly registered user to add and update profile - redirects new user to add profile - existing user can also update profile - link the form to the appropriate model - add new profile for no-existing user - remove table guarantor - remove table relationship - add column guarantor_one_id and guarantor_two_id to loans table - remove relationship column from profile table Finishes[#152485295]

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,10 +33,10 @@
                       <span class="caret"></span>
                     </div>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                      <%= link_to profile_path(1), class: "dropdown-item" do %>
+                      <%= link_to profile_path(@user_id), class: "dropdown-item" do %>
                         <span class="fa fa-user"></span> Profile
                       <% end %>
-                      <%= link_to profile_path(1), class: "dropdown-item" do %>
+                      <%= link_to profile_path(@user_id), class: "dropdown-item" do %>
                         <span class="fa fa-cog"></span> Settings
                       <% end %>
                       <div class="dropdown-divider"></div>
