--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -13,7 +13,7 @@
             Jonathan Malls <br>
             <small class="text-muted">08012345678</small>
           </h5>
-          <%= link_to edit_profile_path(1), class: "btn btn-danger" do %>
+          <%= link_to edit_profile_path(@user_id), class: "btn btn-danger" do %>
             <span class="fa fa-user"></span> Edit Profile
           <% end %>
          </div>
