--- a/app/views/layouts/_registerform.html.erb
+++ b/app/views/layouts/_registerform.html.erb
@@ -20,35 +20,35 @@
           <%= form_with(model: user, local: true) do |form| %>
             <div class="form-group row">
               <div class="col-12">
-                <%= label_tag :username, 'Staff ID' %>
+                <%= form.label :username, 'Staff ID' %>
                 <%= form.text_field :username, id: :username, class: 'form-control', placeholder: 'Staff ID', autofocus:true, required: true %>
               </div>
             </div>
 
             <div class="form-group row">
               <div class="col-12">
-                <%= label_tag :email, 'Email' %>
+                <%= form.label :email, 'Email' %>
                 <%= form.text_field :email, id: :user_email, class: 'form-control', placeholder: 'Email' , required: true %>
               </div>
             </div>
 
             <div class="form-group row">
               <div class="col-12">
-                <%= label_tag :password, 'Password' %>
+                <%= form.label :password, 'Password' %>
                 <%= form.password_field :password, id: :password, class: "form-control", placeholder: "Password", required: true %>
               </div>
             </div>
 
             <div class="form-group row">
               <div class="col-12">
-                <%= label_tag :password_confirmation, 'Confirm Password' %>
+                <%= form.label :password_confirmation, 'Confirm Password' %>
                 <%= form.password_field :password_confirmation, id: :password_confirmation, class: 'form-control', placeholder: 'Confirm password', required: true %>
               </div>
             </div>
 
             <div class="form-group">
-              <input type="checkbox" name="terms" id="terms" required>
-              <label for="terms">I read and agreed to the <a href="javascript:void(0);">terms of conditions</a>.</label>
+              <%= form.check_box :terms, id: :terms, required: true %>
+              <%= form.label :terms, 'I read and agreed to the' %> <a href="javascript:void(0);">terms of conditions</a>
             </div>
 
             <div class="form-group text-center row mt-2">
