--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,15 @@
 
 @import "puffly";
 
+#puffly {
+  bottom: 80%;
+
+  &, .notice {
+    background-color: #333 !important;
+    z-index: 2000;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -23,25 +32,6 @@ html,
 body,
 .login-page {
   height: 100%;
-}
-
-.flash-message {
-  width: 200em;
-  font-weight: 400;
-  margin: 0 auto;
-  text-align: center;
-  color: black;
-  background: white;
-}
-
-#puffly {
-  background-color: #000 !important;
-  position: absolute !important;
-  padding: 20px;
-  right: 2% !important;
-  bottom: 80%;
-  transform: translate(-50%, 0);
-  font-size: 1em !important;
 }
 
 .card-table, .table-money-holder {
