--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -1,7 +1,7 @@
 @import "plugins/bootstrap/custom";
 
 body {
-  padding-top: 130px;
+  padding-top: 80px;
   padding-bottom: 60px;
 }
 
@@ -18,6 +18,7 @@ body {
 .page-title {
   font-size: 1.75em;
   margin-bottom: 0.8em;
+  margin-top: 2.5em;
 }
 
 table.borderless {
