--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,11 +1,6 @@
-<div class="flash-message">
-  <% if flash[:notice] %>
-    <%= content_tag :span, flash[:notice], class: "notice", id: "puffly" %>
-  <% end %>
-</div>
 <section class="main-content">
   <div class="container">
-    <h3 class="h4 mt-3 mb-4">Welcome Back, Anuoluwapo</h3>
+    <h3 class="page-title mb-4">Welcome Back, Anuoluwapo</h3>
 
     <div class="row">
 
@@ -39,12 +34,12 @@
         <div class="row">
           <div class="col-md-6">
             <!-- Card Tiles -->
-            <a class="card tiles purple" href="#">
+            <%= link_to loans_path, class: "card tiles purple" do %>
               <div class="card-body">
                 <span class="tiles-icon fa fa-credit-card"></span>
                 <h4 class="tiles-link">Apply for Loan</h4>
               </div>
-            </a>
+            <% end %>
             <!-- /.Card Tiles -->
           </div>
           <div class="col-md-6">
