--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <% if cookies[:user_info] && session[:current_user_info] %>
       <%= render("layouts/header") %>
     <% end %>
+    <% flash.each do |type, msg| %>
+      <%= content_tag :span, msg, class: "#{type}", id: "puffly" %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
