--- a/app/views/layouts/_navbar-user.html.erb
+++ b/app/views/layouts/_navbar-user.html.erb
@@ -1,5 +1,7 @@
 <li class="nav-item">
-  <a class="nav-link" href="#"><span class="fa fa-circle-o"></span> Loan Application</a>
+  <%= link_to loans_path, class: "nav-link" do %>
+    <span class="fa fa-calendar"></span> Loan Application
+  <% end %>
 </li>
 <li class="nav-item">
   <%= link_to contributions_path, class: "nav-link" do %>
