--- a/app/assets/stylesheets/tiles.scss
+++ b/app/assets/stylesheets/tiles.scss
@@ -22,7 +22,7 @@ $purple: #8956bb !default;
   }
 }
 
-a.tiles {
+a.tiles, section.tiles {
   color: white;
   background: $red;
   padding: 30px;
@@ -30,6 +30,7 @@ a.tiles {
   -webkit-transition: all .5s ease;
   height: 185px;
   transition: all .5s ease;
+  font-weight: 400;
 
   hr {
     border: 1px solid whitesmoke;
@@ -44,11 +45,13 @@ a.tiles {
   &.big {
     height: 400px;
     padding: 60px;
+    &.chart {
+      padding: 5px 20px;
+    }
   }
 
-  &:hover {
-    color: white;
-    text-decoration: none;
+  &.white {
+    background: white;
   }
 
   &.purple {
@@ -83,13 +86,17 @@ a.tiles {
       font-size: 1.4em;
     }
   }
-
-
 }
 
 .tiles-link {
   margin-top: 100px;
   font-size: 1.2rem;
+  div {
+    font-size: 14px;
+    color: #eaeaea;
+    margin-top: 5px;
+    opacity: .5;
+  }
 }
 
 .tiles-icon {
