--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -50,16 +50,7 @@
           <div class="container">
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <%= link_to root_path, class: "nav-link" do %>
-                    <span class="fa fa-home"></span> Home <span class="sr-only">(current)</span>
-                  <% end %>
-                </li>
-                <% unless admin? %>
-                  <%= render("layouts/navbar-user") %>
-                <% else %>
-                  <%= render("layouts/navbaradmin") %>
-                <% end %>
+                <%= render("layouts/navbar") %>
               </ul>
             </div>
           </div>
