fix(adminPage): design all landing pages - fix footer for login and signup page [Fixes #150952242]

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -2,6 +2,7 @@
 
 .widget {
   margin-bottom: 30px;
+  transition: all 2s ease-out;
   .widget-title {
     border-bottom: 1px solid #e7eaec;
     padding: 15px 20px;
