--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,16 +16,16 @@
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="nav-icons">
+                    <%= link_to notifications_path, class: "nav-icons" do %>
                       <span class="fa fa-bell"></span>
                       <span class="fa fa-circle notification"></span>
-                    </a>
+                    <% end %>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="nav-icons">
+                    <%= link_to messages_path, class: "nav-icons" do %>
                       <span class="fa fa-envelope"></span>
                       <span class="fa fa-circle notification"></span>
-                    </a>
+                    <% end %>
                   </li>
                   <li class="dropdown list-inline-item">
                     <div class="user-toggle dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="false" aria-expanded="true">
@@ -36,9 +36,13 @@
                       <%= link_to profile_path(1), class: "dropdown-item" do %>
                         <span class="fa fa-user"></span> Profile
                       <% end %>
-                      <a class="dropdown-item" href="#"><span class="fa fa-cog"></span> Settings</a>
+                      <%= link_to profile_path(1), class: "dropdown-item" do %>
+                        <span class="fa fa-cog"></span> Settings
+                      <% end %>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="/logout" title="Logout"><span class="fa fa-sign-out"></span> Logout</a>
+                      <%= link_to logout_path, class: "dropdown-item" do %>
+                        <span class="fa fa-signout"></span> Logout
+                      <% end %>
                     </div>
                   </li>
               </ul>
@@ -46,7 +50,7 @@
           </div>
         </nav>
 
-        <nav class="navbar navbar-toggleable-md main-navigation">
+        <nav class="navbar navbar-toggleable-sm main-navigation">
           <div class="container">
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav">
