fix(userDashboard): user shoud see contribution and loans details and admin user redirected to admin dashboard - admin user when logged in is redirected to the admin dashboard - regular user can view summary of loan and contribution on the dashboard [Fixes #153825983]

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,9 +2,13 @@
   <%= navigation_menu('Home', admin_index_path, 'home') %>
   <%= navigation_menu('Manage Loans', loans_path, 'circle-o') %>
   <%= navigation_menu('Manage Contributions', contributions_path, 'calendar') %>
-  <%= navigation_menu('Manage Users', admin_index_path, 'users') %>
+  <%= navigation_menu('Manage Users', contributions_path, 'users') %>
+  <% if super_admin? %>
+    <%= navigation_menu('Manage Admins', admin_index_path, 'users') %>
+  <% end %>
 <% else %>
   <%= navigation_menu('Home', root_path, 'home') %>
   <%= navigation_menu('Loan Application', loans_path, 'calendar') %>
   <%= navigation_menu('Monthly Contribution', contributions_path, 'calendar') %>
+  <%= navigation_menu('Loan Repayment', root_path, 'calendar') %>
 <% end %>
