fix(dashboardPage): fixes dashboard unable to load when user have no contribution or loan repayment [Fixes #153846721]

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -84,7 +84,7 @@
                 See All
               <% end %>
             </div>
-            <% if @monthly_contribution.empty? %>
+            <% if @monthly_contribution == 0 || @monthly_contribution.nil? %>
               <div class="card-body">
                 You currently do not have any contribution
               </div>
